# oxi

./: .gitignore  Cargo.toml  README.md  cubecl.toml  run_optimization.sh
src/: chess_output.rs  config.rs  dataset.rs  encoding.rs  encoding_test.rs  gamma_utils.rs  inference.rs  legal_move_probability_metric.rs  lib.rs  main.rs  model.rs  model_prediction_logger.rs  move_accuracy_metric.rs  move_distribution_accuracy_metric.rs  move_encoding.rs  moves.rs  pgn_processor.rs  policy_loss_metric.rs  relative_position_transformer.rs  rope.rs  side_info_loss_metric.rs  time_usage_loss_metric.rs  training.rs  uncertainty_metric.rs  value_loss_metric.rs  wdl_accuracy_metric.rs
src/snapshots/: oxi__encoding__tests__square_control_f6_and_d4.snap  oxi__encoding__tests__square_control_f6_and_d4.snap.new  oxi__encoding_test__tests__encode_starting_position.snap  oxi__encoding_test__tests__encode_starting_position.snap.new  oxi__model_prediction_logger__tests__format_time_usage_distribution_edge_case.snap  oxi__model_prediction_logger__tests__format_time_usage_distribution_edge_case.snap.new  oxi__model_prediction_logger__tests__format_time_usage_distribution_high_variance.snap  oxi__model_prediction_logger__tests__format_time_usage_distribution_high_variance.snap.new  oxi__model_prediction_logger__tests__format_time_usage_distribution_snapshot.snap  oxi__model_prediction_logger__tests__format_time_usage_distribution_snapshot.snap.new  oxi__pgn_processor__tests__clock_data_snapshot.snap
tests/: smoke_test.rs  test_projections.rs  test_uncertainty_weighting.rs
(+5 files in other folders)
